<resources>
    <string name="app_name">ModerateLiving</string>
    <string name="no_userID_error_message">No users found in database</string>
    <string name="mainActivityWelcomeText">Welcome Message Here</string>
    <string name="textViewPointsBalanceText">"Your Points Balance: "</string>
    <string name="textViewPointBalanceDisplay">0 Points (Default)</string>
    <string name="buttonHealthActivitiesSelect">Health Activities</string>
    <string name="buttonSplurgesSelect">Splurges</string>
    <string name="buttonViewLogSelect">View Log</string>
    <string name="buttonEditUserSettingsSelect">Edit User Settings</string>
    <string name="buttonEnterAdminToolsSelect">Admin Tools</string>
    <string name="textViewSignInText">Please Sign In!</string>
    <string name="editTextUserInputDefault">Username</string>
    <string name="editTextPasswordInput">Password</string>
    <string name="buttonLoginSelect">Login</string>
    <string name="buttonSignUpSelect">Sign Up</string>
    <string name="adminActivityWelcomeText">Welcome Admin</string>
    <string name="buttonAdminActivityUserManagement">User Management</string>
    <string name="buttonAdminActivityFullUserLog">Full User Log</string>
    <string name="buttonAdminActivityDatabaseReset">Database Reset</string>
    <string name="textViewSignUpText">Please Sign Up!</string>
    <string name="editTextUserSignUp">Username</string>
    <string name="editTextPasswordSignUp1">Password</string>
    <string name="editTextPasswordSignUp2">Password Again</string>
    <string name="textViewSignUpName">Full Name:"</string>
    <string name="textViewSignUpWeight">"Your Weight (lbs):"</string>
    <string name="textViewSignUpBirthday">Your Birthday:</string>
    <string name="editTextSignUpBirthdayHint">YYYY-MM-DD</string>
    <string name="editTextSignUpWeightInput">185.00</string>
    <string name="editTextSignUpNameHint">Your Name</string>
    <string name="userManagementColName">Name</string>
    <string name="userManagementColWeight">Weight</string>
    <string name="userManagementColBirthday">Birthday</string>
    <string name="buttonUserManagement">Go Back</string>
    <string name="textViewHealthActivityText">Moderate Living: Health Activities</string>
    <string name="buttonHealthActivityCreate">Create Health Activity</string>
    <string name="buttonHealthActivityCollCreate">Create Health Activity Collection</string>
    <string name="textViewHealthActivityIncomplete">Complete</string>
    <string name="textViewHealthActivityDescription">Description</string>
    <string name="textViewHealthActivityPoints">"Points"</string>
    <string name="buttonHealthActivityHome">Go Back</string>
    <string name="textViewHealthEntryName">Name</string>
    <string name="textViewHealthEntryPoints">Points</string>
    <string name="buttonHealthConfigComplete">Complete Activity</string>
    <string name="buttonHealthConfigDelete">Delete Activity</string>
    <string name="buttonHealthConfigUpdate">Save Activity</string>
    <string name="textViewReturnToHealthActivities">Go Back</string>
    <string name="editTextHealthActivityName">Health Activity Name</string>
    <string name="editTextHealthActivityDescription">Health Activity Description</string>
    <string name="editTextHealthPerActivity">Points per Activity</string>
    <string name="checkBoxHealthActivityIsRecurring">Repeating Activity (TBD)</string>
    <string name="textViewSplurgeActivity">Moderate Living: Splurge Time!</string>
    <string name="buttonSplurgeActivityCreate">Create Splurge!</string>
    <string name="textViewSplurgeActRedeem">Redeem</string>
    <string name="textViewSplurgeActivityDescription">Description</string>
    <string name="textViewSplurgeActivityPoints">Points</string>
    <string name="buttonSplurgeActivityHome">Go Back</string>
    <string name="editTextSplurgeName">Splurge Name</string>
    <string name="editTextSplurgeDescription">Splurge Description</string>
    <string name="editTextSplurgePoints">Points Cost</string>
    <string name="buttonSplurgeConfigRedeem">Redeem</string>
    <string name="buttonSplurgeConfigUpdate">Save Splurge</string>
    <string name="buttonSplurgeConfigDelete">Delete</string>
    <string name="textViewUserLogActivityMainText">Moderate Living: User Log</string>
    <string name="textViewUserNameText">Name:</string>
    <string name="textViewLogEntryUsernameDisplay">Username</string>
    <string name="textViewLogEntryDescription">Log Entry Description</string>
    <string name="textViewLogEntryOn">on</string>
    <string name="textViewLogEntryActivityType">ActivityType</string>
    <string name="textViewLogEntryDate">Date</string>
    <string name="textViewLogEntryForWith">for/with</string>
    <string name="textViewLogEntryPoints">Points</string>
    <string name="textViewSplurgeActivityMainText">Moderate Living: Splurge Time!</string>
    <string name="textViewLogEntryWithName">with name:</string>
    <string name="textViewLogEntryName">Name</string>
    <string name="buttonHealthActivityShowAll">Show Completed</string>
    <string name="textViewUserManagementUsernameText">"Username: "</string>
    <string name="textViewUserManagementUsernameDisplay">username</string>
    <string name="textViewUserManagementNameText">Name:</string>
    <string name="textViewUserManagementNameDisplay">name</string>
    <string name="textViewUserManagementWeight">Weight:</string>
    <string name="textViewUserManagementWeightDisplay">weight</string>
    <string name="textViewUserManagementBirthdayText">Birthday:</string>
    <string name="textViewUserManagementBirthdayDisplay">birthday</string>
    <string name="textViewUserManagementPointsText">Points:</string>
    <string name="textViewUserManagementPointsDisplay">points</string>
    <string name="textViewUserManagementIsAdmin">Is Admin:</string>
    <string name="textViewUserManagementYesNo">yes/no</string>
    <string name="textViewUserManagementMainText">Moderate Living: User Management</string>
    <string name="checkBoxSignUpIsAdmin">Is Admin</string>
    <string name="buttonSignUpDiscard">Discard Changes</string>
    <string name="buttonUserLogReturn">Go Back</string>
    <string name="stringSignUpSubmit">Submit</string>
    <string name="stringSignUpUpdate">Update User Settings Below</string>
    <string name="stringSignUpNewUser">New User</string>
</resources>